[metadata]
name = BrainConnectPy
version = 0.1.0
author = Marco Di Giorgi
author_email = marcodigiorgi96@gmail.com
description = Software born to give voice to ALS patients.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/...
project_urls =
    Bug Tracker = https://github.com/.../...
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License (?)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
